tests/res/arrays/error_float_index.say
print([1, 2][1.5]); // error: Invalid array index: 1.5